--- a/kitaplik/index.html
+++ b/kitaplik/index.html
@@ -262,5 +262,5 @@
 </html>
 <script src="https://cdn.jsdelivr.net/npm/qrcode/build/qrcode.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/jsqr/dist/jsQR.min.js"></script>
-<script src="script.js" type="module" defer></script>
+<script src="./script.js" type="module" defer></script>
 <script src="https://kit.fontawesome.com/d5360bfebf.js" crossorigin="anonymous"></script>
